# 10grade-christmas-luck-codey

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
codeyapp/: CMakeLists.txt  Codey.pro  Codey.pro.user.21643a3  Codey.pro.user.9788121  Codey.pro.user.bf290fe  Codey.pro.user.c5e35cc  Makefile  main.cpp  resources.qrc  ui_authwindow.h  ui_dashboard.h  ui_mainwindow.h  ui_mybooks.h  ui_readbook.h  ui_rent.h  ui_writebook.h
codeyapp/Codey.app/Contents/: Info.plist
codeyapp/dataAccessLayer/: books.txt  database.cpp  database.h  dbConnection.cpp  dbConnection.h  info.txt  login.cpp  users.txt
codeyapp/presentationLayer/: authwindow.cpp  authwindow.h  authwindow.ui  dashboard.cpp  dashboard.h  dashboard.ui  deposit.cpp  deposit.h  deposit.ui  info.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mybooks.cpp  mybooks.h  mybooks.ui  readbook.cpp  readbook.h  readbook.ui  rent.cpp  rent.h  rent.ui  withdraw.cpp  withdraw.h  withdraw.ui  writeBook.h  writebook.cpp  writebook.ui
codeyapp/sqlapi/: SQLAPI.h
codeyapp/styles/: dark.qss  light.qss
codeyweb/: index.html  package-lock.json  package.json  tailwind.config.js
codeyweb/src/: App.css  App.tsx
documents/Doxygen Documentation/: Doxyfile
documents/Doxygen Documentation/html/: annotated.html  annotated_dup.js  authwindow_8cpp.html  authwindow_8cpp__incl.dot  authwindow_8h.html  authwindow_8h.js  authwindow_8h__dep__incl.dot  authwindow_8h__incl.dot  authwindow_8h_source.html  class_dashboard-members.html  class_dashboard.html  class_dashboard.js  class_dashboard__coll__graph.dot  class_dashboard_a937d0e0c1b405a283f67a95eadea3e04_cgraph.dot  class_dashboard_a937d0e0c1b405a283f67a95eadea3e04_icgraph.dot  class_dashboard_a99f4d34f50629f1118494855ca584697_cgraph.dot  class_dashboard_ab8c28d36273d685004a38b000b86c966_icgraph.dot  class_dashboard_af827b627b8345f549f21c72a5b766eb8_icgraph.dot  class_deposit-members.html  class_deposit.html  class_deposit.js  class_deposit__coll__graph.dot  class_deposit_a363f1781f53ff8b767eeb271cb2ec11e_cgraph.dot  class_deposit_a363f1781f53ff8b767eeb271cb2ec11e_icgraph.dot  class_main_window-members.html  class_main_window.html  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.dot  class_rent-members.html  class_rent.html  class_rent.js  class_rent__coll__graph.dot  class_rent_ab7571157c76bdf2df41bc5d8a2e56e26_cgraph.dot  class_rent_ab7571157c76bdf2df41bc5d8a2e56e26_icgraph.dot  class_withdraw-members.html  class_withdraw.html  class_withdraw.js  class_withdraw__coll__graph.dot  class_withdraw_a27e3bf5726ded707b7859b7bfa09732c_cgraph.dot  class_withdraw_a27e3bf5726ded707b7859b7bfa09732c_icgraph.dot  class_withdraw_ac89d3d31036aecb4e836debd3b3f05da_cgraph.dot  (+95 more)
documents/Doxygen Documentation/latex/: annotated.tex  authwindow_8cpp.tex  authwindow_8cpp.tex.tmp  authwindow_8cpp__incl.dot  authwindow_8h.tex  authwindow_8h__dep__incl.dot  authwindow_8h__incl.dot  authwindow_8h_source.tex  class_dashboard.tex  class_dashboard__coll__graph.dot  class_dashboard_a937d0e0c1b405a283f67a95eadea3e04_cgraph.dot  class_dashboard_a937d0e0c1b405a283f67a95eadea3e04_icgraph.dot  class_dashboard_a99f4d34f50629f1118494855ca584697_cgraph.dot  class_dashboard_ab8c28d36273d685004a38b000b86c966_icgraph.dot  class_dashboard_af827b627b8345f549f21c72a5b766eb8_icgraph.dot  class_deposit.tex  class_deposit__coll__graph.dot  class_deposit_a363f1781f53ff8b767eeb271cb2ec11e_cgraph.dot  class_deposit_a363f1781f53ff8b767eeb271cb2ec11e_icgraph.dot  class_main_window.tex  class_main_window__inherit__graph.dot  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.dot  class_main_window_a996c5a2b6f77944776856f08ec30858d_icgraph.dot  class_rent.tex  class_rent__coll__graph.dot  class_rent_ab7571157c76bdf2df41bc5d8a2e56e26_cgraph.dot  class_rent_ab7571157c76bdf2df41bc5d8a2e56e26_icgraph.dot  class_withdraw.tex  class_withdraw__coll__graph.dot  class_withdraw_a27e3bf5726ded707b7859b7bfa09732c_cgraph.dot  class_withdraw_a27e3bf5726ded707b7859b7bfa09732c_icgraph.dot  (+69 more)
(+26 files in other folders)
